src/css/components/_Navigation.styl
.Navigation
  background-color: $lightest
  +above($medium)
      background-color: transparent
  flex-direction: row
  position: fixed
  top: 0
  right: 0
  left: 0
  z-index: 100
  a
    &:after
      background-image: linear-gradient(180deg, #2af598 0%, #009efd 100%)
      content: ''
      display: block
      height: 2px
      margin: 0 auto
      transition: all .3s ease-in-out
      width: 0
    &:hover
      color: $link-hover
      &:after
        width: 30px
  &.is-home
    background-color: transparent
    a
      color: #fff
  .Grid
    flex-direction: row
    +below($medium)
      .Cell
        padding: .5em
  
  .six
    +below($medium)
      width: 100%

.Navigation__secondary
  +above($medium)
    background-color: transparent
    bottom: -20%
    margin-top: 0
    position: fixed
  background-color: $light
  left: 0
  
  position: relative
  right: 0
  transition: all .6s ease-in-out
  z-index: 100
  &.moveInUp
    bottom: 0%
    margin-top: 10em
  a
    font-size: .8em
    margin: 0 15px

